--- a/nextflow.config
+++ b/nextflow.config
@@ -17,9 +17,9 @@ params {
   config_profile_description = null
   config_profile_contact     = 'xqc3@cdc.gov'
   config_profile_url         = null
-  projectDir		     ="/home/kornthara/neissflow-kornthara"
+  
   // set defaults
-  mash_db                    = "${projectDir}/assets/databases/RefSeqSketchesDefaults.msh" 
+  mash_db                    = "RefSeqSketchesDefaults.msh" 
   reference_genome           = null
   FA19_ref                   = "${projectDir}/assets/FA19.gb"
   FA19cg                     = "${projectDir}/assets/FA19cg.fa"
@@ -92,16 +92,6 @@ params {
 
 // Load base.config by default for all pipelines
 includeConfig 'conf/base.config'
-
-// Default container engine configuration
-singularity.enabled     = true
-singularity.autoMounts  = true
-docker.enabled          = false
-conda.enabled           = false
-podman.enabled          = false
-shifter.enabled         = false
-charliecloud.enabled    = false
-apptainer.enabled       = false
 
 /*
 ========================================================================================
@@ -210,55 +200,6 @@ profiles {
     process.beforeScript    = 'echo $HOSTNAME'
     cleanup                 = false
     nextflow.enable.configProcessNamesValidation = true
-  }
-
-  local {
-    singularity.enabled    = true
-    singularity.autoMounts = true
-    docker.enabled         = false
-    conda.enabled          = false
-    podman.enabled         = false
-    shifter.enabled        = false
-    charliecloud.enabled   = false
-    apptainer.enabled      = false
-    
-    process {
-      executor = 'local'
-      cpus     = 10
-      memory   = '56.GB'
-      
-      // Conservative per-process limits
-      withLabel:process_single {
-        cpus   = 1
-        memory = '4.GB'
-      }
-      withLabel:process_low {
-        cpus   = 2
-        memory = '8.GB'
-      }
-      withLabel:process_medium {
-        cpus   = 4
-        memory = '16.GB'
-      }
-      withLabel:process_high {
-        cpus   = 8
-        memory = '32.GB'
-      }
-      withLabel:process_long {
-        cpus   = 4
-        memory = '16.GB'
-      }
-      withLabel:process_high_memory {
-        cpus   = 4
-        memory = '48.GB'
-      }
-    }
-    
-    executor {
-      name = 'local'
-      cpus = 10
-      memory = '56.GB'
-    }
   }
 }
 
