--- a/nextflow.config
+++ b/nextflow.config
@@ -17,9 +17,9 @@ params {
   config_profile_description = null
   config_profile_contact     = 'xqc3@cdc.gov'
   config_profile_url         = null
-  
+  projectDir                 = "/home/kornthara/neissflow-kornthara/"
   // set defaults
-  mash_db                    = "RefSeqSketchesDefaults.msh" 
+  mash_db                    = "${projectDir}/assets/databases/RefSeqSketchesDefaults.msh" 
   reference_genome           = null
   FA19_ref                   = "${projectDir}/assets/FA19.gb"
   FA19cg                     = "${projectDir}/assets/FA19cg.fa"
@@ -34,8 +34,8 @@ params {
   ngmasterdb                 = "${projectDir}/assets/alleledb/ngmaster/"
   ngstar                     = "${projectDir}/assets/alleledb/ngmaster/pubmlst/ngstar/ngstar.txt"
   ngmast                     = "${projectDir}/assets/alleledb/ngmaster/pubmlst/ngmast/ngmast.txt"
-  pubmlst                    = "mlst/pubmlst/"
-  blastdb                    = "mlst/blastdb"
+  pubmlst                    = "${projectDir}/assets/databases/pubmlst/"
+  blastdb                    = "${projectDir}/assets/databases/blastdb"
   dbname                     = "mlst.fa"
   ngmasterdb_version         = "01/2025"
   snp_dist                   = 20
@@ -85,8 +85,8 @@ params {
 
   
   // Max resource options
-  max_memory                 = '256.GB'
-  max_cpus                   = 16
+  max_memory                 = '56.GB'
+  max_cpus                   = 10
   max_time                   = '240.h'
 }
 
@@ -193,6 +193,27 @@ profiles {
 
   QC {
     includeConfig 'conf/QC.config'
+  }
+
+  local {
+    process {
+      executor = 'local'
+      cpus = { check_max( 10, 'cpus' ) }
+      memory = { check_max( 56.GB, 'memory' ) }
+      time = { check_max( 240.h, 'time' ) }
+    }
+    executor {
+      queueSize = 4
+      pollInterval = '15 sec'
+    }
+    singularity.enabled     = true
+    singularity.autoMounts  = true
+    conda.enabled           = false
+    docker.enabled          = false
+    podman.enabled          = false
+    shifter.enabled         = false
+    charliecloud.enabled    = false
+    apptainer.enabled       = false
   }
 
   debug {
