--- a/nextflow.config
+++ b/nextflow.config
@@ -171,6 +171,9 @@ profiles {
   singularity {
     singularity.enabled     = true
     singularity.autoMounts  = true
+    singularity.cacheDir    = "${HOME}/.singularity/cache"
+    singularity.pullTimeout = '60.min'
+    singularity.runOptions  = '--cleanenv'
     conda.enabled           = false
     docker.enabled          = false
     podman.enabled          = false
@@ -208,6 +211,9 @@ profiles {
     }
     singularity.enabled     = true
     singularity.autoMounts  = true
+    singularity.cacheDir    = "${HOME}/.singularity/cache"
+    singularity.pullTimeout = '60.min'
+    singularity.runOptions  = '--cleanenv'
     conda.enabled           = false
     docker.enabled          = false
     podman.enabled          = false
